force-app/main/default/objects/RecordAssignMember__c/RecordAssignMember__c.object-meta.xml
<CustomObject>
    <description>Configuration object for record assignment rules</description>
    <label>Record Assignment Member</label>
    <nameField>
        <displayFormat>RAM-{0000}</displayFormat>
        <label>Record Assignment Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Assignment Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>