force-app/main/default/objects/RecordAssignMember__c/fields/Last_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment__c</fullName>
    <inlineHelpText>Date and time of last assignment from the round robin process</inlineHelpText>
    <label>Last Assignment</label>
    <type>DateTime</type>
</CustomField>