force-app/main/default/objects/RecordAssignMember__c/fields/Limit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Limit_Frequency__c</fullName>
    <inlineHelpText>Length of time in which a specified limit will be enforced</inlineHelpText>
    <label>Limit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>