force-app/main/default/objects/RecordAssignMember__c/fields/RecordAssignConfiguration__c.field-meta.xml
<CustomField>
    <fullName>RecordAssignConfiguration__c</fullName>
    <label>Record Assignment Configuration</label>
    <referenceTo>RecordAssignConfiguration__c</referenceTo>
    <relationshipLabel>Record Assignment Members</relationshipLabel>
    <relationshipName>RecordAssignMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>