force-app/main/default/objects/RecordAssignMember__c/fields/Records_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Records_Assigned__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of records assigned during the specified Limit Frequency</inlineHelpText>
    <label>Records Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>