force-app/main/default/objects/RecordAssignMember__c/fields/Under_Limit__c.field-meta.xml
<CustomField>
    <fullName>Under_Limit__c</fullName>
    <formula>OR(ISBLANK(Limit__c), Records_Assigned__c &lt; Limit__c)</formula>
    <label>Under Limit</label>
    <type>Checkbox</type>
</CustomField>