force-app/main/default/objects/RecordAssignMember__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user that will be assigned as an owner from the round robin process</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Round_Robin_Members</relationshipName>
    <type>Lookup</type>
</CustomField>