force-app/main/default/objects/RecordAssignMember__c/validationRules/Chatter_User_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Chatter_User_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(User__r.Profile.UserType, &quot;CsnOnly&quot;)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>Chatter user cannot be selected</errorMessage>
</ValidationRule>